# rust-simple-example-cross-bridge

./: .env  Cargo.toml  README.md  lock.json  test.json
src/: main.rs  mainbridge.rs  mainbridge_abi.json  sidebridge.rs  sidebridge_abi.json
src/frontend/: client.vue
src/solidity/: MainBridge.sol  SideBridge.sol  childContract.sol  tokenContract.sol
