[package]
name = "rust-simple-example-cross-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hex = "0.4"
web3 = "0.16.0"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"

tracing-subscriber = { version="0.3.3" , features = ["env-filter"] }

tracing = "0.1.29"


anyhow = "1.0.51"

hex-literal = "0.3.4"
bytes = "1.1.0"


secp256k1 = { version = "0.20", features = ["recovery"]}

ethabi = "17.0.0"

# ethereum-tx-sign = "4.0.0"
